Updated author and location comments

--- a/ThreadDumpAnalyzer/ThreadDumpAnalyzer.css
+++ b/ThreadDumpAnalyzer/ThreadDumpAnalyzer.css
@@ -1,3 +1,8 @@
+/*
+<!-- Author: Tomasz Mozolewski @2014 -->
+<!-- https://github.com/mozotom/web/tree/master/ThreadDumpAnalyzer -->
+*/
+
 body {
   margin: 0px;
   height: 100%;
